2002-08-06  Gary Thomas  <gary@chez-thomas.org>

	* src/crc.c: POSIX crc code is now separate.
	
	* src/mfill.c: 
	* src/mcmp.c: 
	* src/dump.c: 
	* src/cksum.c: 
	* src/caches.c: New (split out) file(s).

	* src/main.c: 
	* cdl/redboot.cdl: Split major CLI functionality to separate
	files, more easily controlled by CDL - inspired by Andrew.

2002-08-06  Andrew Lunn  <Andrew.Lunn@ascom.ch>

	* src/io.c: Fix the parsing of boot scripts to allow the use
	  of aliases. This was broken when the ability to do startup
	  type specific scripting was added.

2002-08-05  Andrew Lunn  <Andrew.Lunn@ascom.ch>

	* src/main.c: Made more of the commands conditionally compilable
	* cdl/redboot.cdl: CDL code to control the compilation.
	
2002-07-30  Gary Thomas  <gary@chez-thomas.org>

	* src/net/net_io.c: Handle broadcast/mask setup better (failed if
	not found in FLASH).  Also print on network info line.

2002-07-18  Gary Thomas  <gary@chez-thomas.org>

	* src/net/tftp_client.c: 
	* src/net/http_client.c: 
	* src/fs/disk.c: 
	* src/xyzModem.c: 
	* src/load.c: 
	* include/redboot.h: Rework load/mode information tables so that
	load I/O methods can detect actual mode (e.g. X-modem vs Y-modem)

2002-07-16  Hendrik Ruijter  <Hendrik.Ruijter@axis.com>
2002-07-16  Mark Salter  <msalter@redhat.com>

	* include/net/net.h: Add __tcp_abort prototype.

	* src/net/icmp.c: The default handler can be replaced by a
	user defined handler which handles all ICMP segments.

	* src/net/ping.c
	(handle_icmp): Only ICMP Echo Reply segments must be counted and
	ICMP Echo Requests are handled in the user defined handler.

	* src/net/tcp.c
	(do_abort, __tcp_abort): Send an RST flag in order to abort a
	connection. May use a delay to send the flag.

2002-07-15  Mark Salter  <msalter@redhat.com>

	* src/net/net_io.c: Increase size of out_buf to 1024 bytes.

2002-07-11  Gary Thomas  <gary@chez-thomas.org>

	* src/io.c (mon_read_char_with_timeout): Ensure interrupts are